--- a/templates/index.html
+++ b/templates/index.html
@@ -1,51 +1,8 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MyTodo</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-
-<body>
-
+{% extends 'base.html' %}
+{% block title %} Home {% endblock title %}
+{% block body %}
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">MyTodo</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
+
 
 <!-- Form -->
 <div class="container my-3">
@@ -66,17 +23,24 @@
 <!-- Table of Todos -->
 <div class="container my-4">
   <h1>Your Todos</h1>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">SR NO.</th>
-        <th scope="col">Title</th>
-        <th scope="col">Description</th>
-        <th scope="col">Time</th>
-        <th scope="col">Actions</th>
-      </tr>
-    </thead>
-    <tbody>
+  
+      {% if allTodo|length == 0 %}
+      <div class="alert alert-dark" role="alert">
+        No Todos Found. Add your's Todos
+      </div>
+        {% else %}
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">SR NO.</th>
+              <th scope="col">Title</th>
+              <th scope="col">Description</th>
+              <th scope="col">Time</th>
+              <th scope="col">Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+      
       {% for todo in allTodo %}
       <tr>
         <th scope="row">{{ loop.index }}</th>
@@ -84,16 +48,19 @@
         <td>{{ todo.dse }}</td>
         <td>{{ todo.date_created.strftime('%Y-%m-%d %H:%M:%S') }}</td>
         <td>
-          <a href="/delete/{{ todo.srno }}" type="button" class="btn btn-outline-dark btn-sm mx-1" >Delete</a>
           <a href="/update/{{ todo.srno }}" type="button" class="btn btn-outline-dark btn-sm mx-1" >Update</a>
+          <a href="/delete/{{ todo.srno }}" type="button" class="btn btn-outline-dark btn-sm mx-1" >Delete</a>
         </td>
       </tr>
       {% endfor %}
     </tbody>
   </table>
+  {% endif %}
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-</body>
-</html>
+
+    
+{% endblock body %}
+
